--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="board">
+        <div class="board__cell" data-cell="0"></div>
+        <div class="board__cell" data-cell="1"></div>
+        <div class="board__cell" data-cell="2"></div>
+        <div class="board__cell" data-cell="3"></div>
+        <div class="board__cell" data-cell="4"></div>
+        <div class="board__cell" data-cell="5"></div>
+        <div class="board__cell" data-cell="6"></div>
+        <div class="board__cell" data-cell="7"></div>
+        <div class="board__cell" data-cell="8"></div>
+      </div>
+    </main>
+  </body>
 </html>
