Modify line points and add div to contain it

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <line x1="10" y1="10" x2="110" y2="110" />
       </symbol>
       <symbol id="diagonal__left" viewBox="0 0 120 120">
-        <line x1="20" y1="10" x2="100" y2="110" />
+        <line x1="20" y1="5" x2="100" y2="115" />
       </symbol>
       <symbol id="diagonal__right" viewBox="0 0 120 120">
-        <line x1="100" y1="10" x2="20" y2="110" />
+        <line x1="100" y1="5" x2="20" y2="115" />
       </symbol>
       <symbol id="vertical__line" viewBox="0 0 40 120">
-        <line x1="20" y1="10" x2="20" y2="110" />
+        <line x1="10" y1="0" x2="30" y2="120" />
       </symbol>
       <symbol id="horizontal__line" viewBox="0 0 120 40">
-        <line x1="10" y1="20" x2="110" y2="20" />
+        <line x1="0" y1="10" x2="120" y2="30" />
       </symbol>
     </svg>
     <main>
@@ -43,6 +43,7 @@
         <div class="board__cell" data-cell="6"></div>
         <div class="board__cell" data-cell="7"></div>
         <div class="board__cell" data-cell="8"></div>
+        <div class="winningLineBox"></div>
       </div>
     </main>
   </body>
