Add fuctional result modal

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
       </form>
     </dialog>
     <dialog class="resultModal">
-      <div>Result Message</div>
-      <div>
-        <button class="playAgainBtn">Play Again</button>
+      <div class="result">
+        <div class="result__message"></div>
+        <div>
+          <button class="playAgainBtn">Play Again</button>
+        </div>
       </div>
     </dialog>
     <main>
